--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "chart.js": "^4.5.1",
     "ngx-bootstrap": "^20.0.2",
     "ngx-cookie-service": "^16.0.0",
     "ngx-toastr": "^19.0.0",
